--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <div class="form-group col-9 mx-auto text-center file-select" >
             <input type="file" id="imagen" name="file"  class="form-control" accept="image/png, image/jpeg, image/jpg" style="display:none;" required/><br>
             <button type="button" class="btn btn-primary mt-2" id="labelarchivo">Selecciona una imagen</button>
-            <img class="text-white" src="img/anonimo.jpg" id="previsualizacion">
+            <img class="text-white setPerfil-image" src="img/anonimo.jpg" id="previsualizacion">
           </div>
         </div>
         <div id="alert-registro"></div>
